--- a/styles/main.css
+++ b/styles/main.css
@@ -11,5 +11,38 @@ body {
     background: linear-gradient(70deg, #2D83EC, #1AC9FF);
 
     font-family: "Inter";
+
+    overflow: hidden;
 }
 
+.main-screen {
+    width: 100vw;
+    height: 100vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.board {
+    width: 90vh;
+    height: 90vh;
+
+    background-color: #00a;
+
+    display: grid;
+    grid-template-rows: repeat(8, 1fr);
+    grid-template-columns: repeat(8, 1fr);
+}
+
+.cell {
+    cursor: pointer;
+}
+
+.light-cell {
+    background: #F7F9FB;
+}
+
+.dark-cell {
+    background: linear-gradient(#03CFC2, #7B84FF);
+}
